Fix bug entering text into table cell using IME

My CL https://chromium-review.googlesource.com/801979 exposed a bug with
PlainTextRange::CreateRange() when passed a collapsed range at the beginning of
a table cell. TextIterator outputs a tab character ('\t') when iterating over a
table cell boundary; PlainTextRange() is currently counting the tab character
in its character count for this case, but returning a start/end position
(they're the same since it's a collapsed range) before the <td> element, causing
an off-by-one error.

xiaochengh@ found a fix for this issue, so CreateRange() now returns a position
inside the text node, instead of before the <td> element.

Bug: 826615
Change-Id: Ief427ea6aeb0b93cf82bae3b6901cf1b2a8cb4c7
Reviewed-on: https://chromium-review.googlesource.com/987385
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Ryan Landay <rlanday@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547447}
Former-commit-id: 9696438d582824750318748c70a95ef6c1285aca